# grade-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  wsgi.py
client/: client.py
server/: server.py
