[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Rahul Yedida <rahul.yedida@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
pandas = "^1.5.2"
cutie = "^0.3.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
